Decor: work & refactor